@@ -72,8 +72,9 @@ void ConfWindow::on_button_save()
 
 void ConfWindow::on_button_cancel()
 {
-	delete m_pVariablesMap;
-	delete this;
+	//delete m_pVariablesMap;
+	//delete this;
+	parent->on_conf_window_close(this);
 }
 
 void ConfWindow::write_to_GMConf()
